added JS code and modified CSS and HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1 id="title">Drum Kit</h1>
+    <p>Want to be a virtual drummer? Click on the below buttons or use the corresponding keys on your keyboard.</p>
     <div class="collection">
         <button class="w drum">w</button>
         <button class="a drum">a</button>
